--- a/layouts/index.pug
+++ b/layouts/index.pug
@@ -1,5 +1,7 @@
 doctype html
 html
+      include partials/header.pug
+      include partials/navbar.pug
       include home.pug
-      block scripts
+      block script
           script(src='/public/js/jquery-3.3.1.js')
