--- a/layouts/index.pug
+++ b/layouts/index.pug
@@ -4,4 +4,27 @@ html
       include partials/navbar.pug
       include home.pug
       block script
-          script(src='/public/js/jquery-3.3.1.js')
+            script(src='public/assets/global/plugins/select2/js/select2.full.min.js', type='text/javascript')
+            script(src='public/assets/global/plugins/jquery-validation/js/jquery.validate.min.js', type='text/javascript')
+            script(src='public/assets/global/plugins/jquery-validation/js/additional-methods.min.js', type='text/javascript')
+            script(src='public/assets/global/plugins/bootstrap-wizard/jquery.bootstrap.wizard.min.js', type='text/javascript')
+            script(src='public/assets/pages/scripts/form-wizard.min.js', type='text/javascript')
+            script(src='public/js/dropzone.js', type='text/javascript')
+            script.
+                  Dropzone.options.myAwesomeDropzone = {
+                        dictDefaultMessage: "",
+                        autoQueue: false,
+                        acceptedFiles: ".zip",
+                        init: function() {
+                              this.on("addedfile", function(file) { 
+                                    if (this.files[1]!=null){
+                                    this.removeFile(this.files[0]);
+                                    }
+                              });
+                        },
+                        uploadMultiple: false,
+
+                        paramName: "file", // The name that will be used to transfer the file
+                        maxFilesize: 50 // MB
+   
+                  };
