--- a/layouts/partials/header.pug
+++ b/layouts/partials/header.pug
@@ -13,6 +13,7 @@ head
     link(href='public/assets/global/plugins/font-awesome/css/font-awesome.min.css', rel='stylesheet', type='text/css')
     link(href='public/assets/global/plugins/simple-line-icons/simple-line-icons.min.css', rel='stylesheet', type='text/css')
     link(href='public/assets/global/plugins/bootstrap/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='public/css/style.css', rel='stylesheet', type='text/css')
     link(href='public/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css', rel='stylesheet', type='text/css')
     // END GLOBAL MANDATORY STYLES
     // BEGIN THEME GLOBAL STYLES
