--- a/layouts/partials/header.pug
+++ b/layouts/partials/header.pug
@@ -23,6 +23,7 @@ head
     // BEGIN THEME LAYOUT STYLES
     link(href='public/assets/layouts/layout6/css/layout.min.css', rel='stylesheet', type='text/css')
     link(href='public/assets/layouts/layout6/css/custom.min.css', rel='stylesheet', type='text/css')
+    link(href='public/js/script.js', type='text/javascript')
     // END THEME LAYOUT STYLES
     link(rel='shortcut icon', href='favicon.ico')
 // END HEAD
