--- a/layouts/index.pug
+++ b/layouts/index.pug
@@ -4,6 +4,8 @@ html
       include partials/navbar.pug
       include home.pug
       block script
+            link(rel='stylesheet', type='text/css', href='public/js/loading-bar.css')
+            script(type='text/javascript', src='public/js/loading-bar.js')
             script(src='public/assets/global/plugins/select2/js/select2.full.min.js', type='text/javascript')
             script(src='public/assets/global/plugins/jquery-validation/js/jquery.validate.min.js', type='text/javascript')
             script(src='public/assets/global/plugins/jquery-validation/js/additional-methods.min.js', type='text/javascript')
@@ -45,6 +47,8 @@ html
                                this.on("success", function(file,res) {
                                     console.log(res);
                                     $('#isupload').val(res);
+                                    $('#btncontinue').click();
+                                    $('#btnback').attr("style",'visibility:hidden');
                                });
 
                         },
