Implement SSE for streaming comsole to web,  fix docker node

--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -771,7 +771,10 @@ html
 														.col-md-4
 															input#projname.form-control(type='text', name='Project',minlength="3", required='' )
 															span.help-block
-													
+
+
+
+
 													.form-group.form-md-checkboxes
 														label.control-label.col-md-3 
 															| Service Select
@@ -830,6 +833,15 @@ html
 														.col-md-12
 															.ldBar.label-center(data-preset="circle",data-stroke="#659be0",data-value='50',style="width:200px;height:200px;margin:auto")
 													h4.form-section status
+																										.code_window
+													.code_bar
+														.code_btn
+													.code_body
+														.pre
+															.comment # Building
+															.prompt
+																| $
+																span.comment ============
 												
 												#tab4.tab-pane
 													h3.block Confirm your account
