--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,121 @@
 .dz-success-mark, .dz-error-mark {
     display:none;
 }
+
+
+.code_window {
+    width: 80%;
+    margin: 0 auto 2rem;
+    box-shadow: 0 0.25rem 0.5rem #12181e;
+    border-radius: 0 0 0.1rem 0.1rem;
+  }
+
+  .code_bar {
+    background: #191919;
+    height: 36px;
+    border-radius: 0.5rem 0.5rem 0 0;
+  }
+  .code_btn, .code_btn::before, .code_btn::after {
+    width: 12px;
+    height: 12px;
+    border-radius: 100%;
+    display: block;
+  }
+
+  .code_btn {
+    background: #f6b73e;
+    position: relative;
+    margin-left: 38px;
+    top: 12px;
+  }
+  .code_btn::before,   .code_btn::after {
+    content: " ";
+    position: absolute;
+  }
+  .code_btn::before {
+    background: #f55551;
+    margin-left: -20px;
+  }
+  .code_btn::after {
+    background: #32c146;
+    margin-left: 20px;
+  }
+  .code_body .pulse {
+    -webkit-animation: pulse 1s ease-in-out infinite;
+    -moz-animation: pulse 1s ease-in-out infinite;
+    animation: pulse 1s ease-in-out infinite;
+  }
+
+
+@-webkit-keyframes pulse {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @-moz-keyframes pulse {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @keyframes pulse {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
+  
+  .code_body {
+    background: #25313e;
+    color: #fff;
+    font-family: "Proxima Nova", "Helvetica Neue", helvetica, arial, sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 1.5;
+    padding-top: 2rem;
+    padding: 20px;
+  }
+
+  .code_body h1 {
+    color: #506479;
+    font-size: 2.4rem;
+    text-align: center;
+    letter-spacing: 0.3rem;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    line-height: 1;
+  }
+  
+  .code_body p {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .command {
+  color: #32c146;
+}
+
+.comment {
+  opacity: 0.5;
+}
+
+.code_body pre {
+    margin: 0;
+  }
