--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -762,7 +762,7 @@ html
 												.alert.alert-success.display-none
 													button.close(data-dismiss='alert')
 													|  Your form validation is successful!
-												#tab1.tab-pane.active
+												#tab4.tab-pane.active 
 													h3.block Provide your Project details
 													.form-group
 														label.control-label.col-md-3
@@ -847,9 +847,9 @@ html
 														.bufferload worker $
 															span.pulse  _
 												
-												#tab4.tab-pane
-													h3.block Confirm your account
-													h4.form-section Account												
+												#tab1.tab-pane
+													include partials/result.pug
+										
 										.form-actions
 											.row
 												.col-md-offset-3.col-md-9
