--- a/layouts/partials/navbar.pug
+++ b/layouts/partials/navbar.pug
@@ -6,7 +6,7 @@ body.page-md
                 .havbar-header
                     // BEGIN LOGO
                     a#index.navbar-brand(href='start.html')
-                        img(src='public/assets/layouts/layout6/img/logo.png', alt='Logo')
+                        img(src='public/img/logo.png', alt='Logo')
                     // END LOGO
                     // BEGIN TOPBAR ACTIONS
                     .topbar-actions
