--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,10 +122,13 @@
 
   #codeBuild-controller {
     top: 80%;
+    color:whitesmoke;
+    background-color: #191919;
     left: 43%;
     z-index: 99;
     position: fixed;
     height: 45px;
     padding: 0px;
     visibility: hidden;
+    box-shadow: 0 2px 3px 2px rgba(0,0,0,.06);
 }
