- update regex Log - router get path for reports - promise regex function query stat from mongo - hit end test to go to report

--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -378,7 +378,7 @@ html
 				p.copyright-v2
 					| 2016 © Metronic Theme By
 					a(target='_blank', href='http://keenthemes.com') Keenthemes
-					a(href='http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes', title='Purchase Metronic just for 27$ and get lifetime updates for free', target='_blank') Purchase Metronic!
+					a(href=' ', title=' data', target='_blank') data!
 				// BEGIN QUICK SIDEBAR TOGGLER
 				button.quick-sidebar-toggler(type='button', data-toggle='collapse')
 					span.sr-only Toggle Quick Sidebar
