--- a/layouts/base.pug
+++ b/layouts/base.pug
@@ -4,7 +4,8 @@ html(lang='th')
 
         block meta
             meta(charset="utf-8")
-            title Metronic Admin Theme #6 | Admin Dashboard
+            script(src='public/js/jquery-3.3.1.js')
+            title Docker JS | CI Wizard
             meta(http-equiv="X-UA-Compatible" content="IE=edge")
             meta(content="width=device-width, initial-scale=1" name="viewport")
             meta(content="Preview page of Metronic Admin Theme #6 for statistics, charts, recent events and reports" name="description")
@@ -46,7 +47,6 @@ html(lang='th')
             div= 'Put content here.'
         
         block scripts
-            script(src='public/js/jquery-3.3.1.js')
             // BEGIN CORE PLUGINS
             script(src="public/assets/global/plugins/jquery.min.js" type="text/javascript")
             script(src="public/assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript")
