--- a/layouts/index.pug
+++ b/layouts/index.pug
@@ -13,6 +13,7 @@ html
       link(rel='stylesheet', type='text/css', href='public/js/loading-bar.css')
       link(href='public/assets/global/plugins/bootstrap-toastr/toastr.css', rel='stylesheet')
       block script
+
             script(src='public/assets/global/plugins/bootstrap-toastr/toastr.js')
             script(src='public/assets/global/plugins/select2/js/select2.full.min.js', type='text/javascript')
             script(src='public/assets/global/plugins/jquery-validation/js/jquery.validate.min.js', type='text/javascript')
@@ -25,6 +26,10 @@ html
             script(src="public/assets/global/plugins/codemirror/mode/htmlmixed/htmlmixed.js" type="text/javascript")
             script(src="public/assets/global/plugins/codemirror/mode/css/css.js" type="text/javascript")
             script(type='text/javascript', src='public/js/loading-bar.js')
+            // RXJS 
+            script(src="node_modules/rx/dist/rx.lite.js" type="text/javascript")
+            script(src="node_modules/rx-dom/dist/rx.dom.js" type="text/javascript")
+
             script.
                   let _file;
                   let source;
